kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-retail-app
  name: sample-retail-app-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "cloudarmor-allow-my-ip"}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-retail-app
  type: ClusterIP
